--- a/fe/package.json
+++ b/fe/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons": "5.6.1",
     "@dnd-kit/core": "6.3.1",
     "@dnd-kit/sortable": "10.0.0",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "1.1.15",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "1.1.15",
@@ -31,12 +32,13 @@
     "cmdk": "1.1.1",
     "embla-carousel-react": "8.6.0",
     "leaflet": "1.9.4",
-    "lucide-react": "0.515.0",
+    "lucide-react": "^0.515.0",
     "next": "15.5.3",
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-redux": "9.2.0",
     "react-toastify": "11.0.5",
+    "recharts": "^2.15.4",
     "tailwind-merge": "3.3.1"
   },
   "devDependencies": {
