--- a/fe/package.json
+++ b/fe/package.json
@@ -27,7 +27,7 @@
     "@reduxjs/toolkit": "2.8.2",
     "antd": "5.26.1",
     "axios": "1.11.0",
-    "class-variance-authority": "0.7.1",
+    "class-variance-authority": "^0.7.1",
     "clsx": "2.1.1",
     "cmdk": "1.1.1",
     "embla-carousel-react": "8.6.0",
