--- a/fe/package.json
+++ b/fe/package.json
@@ -14,6 +14,7 @@
     "@dnd-kit/sortable": "10.0.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "1.1.15",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "2.1.15",
@@ -22,7 +23,7 @@
     "@radix-ui/react-popover": "1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tooltip": "1.2.7",
     "@reduxjs/toolkit": "2.8.2",
@@ -31,11 +32,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "2.1.1",
     "cmdk": "1.1.1",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "8.6.0",
     "leaflet": "1.9.4",
     "lucide-react": "^0.515.0",
     "next": "15.5.3",
     "react": "19.1.1",
+    "react-day-picker": "^9.13.0",
     "react-dom": "19.1.1",
     "react-redux": "9.2.0",
     "react-toastify": "11.0.5",
