featue order inventory

--- a/be/appsettings.json
+++ b/be/appsettings.json
@@ -2,7 +2,8 @@
   "JWT": {
     "Secret": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM",
     "ValidAudience": "https://localhost:2000",
-    "ValidIssuer": "https://localhost:2000"
+    "ValidIssuer": "https://localhost:2000",
+    "Web": "https://localhost:2000"
   },
   "Logging": {
     "LogLevel": {
