--- a/fe/package.json
+++ b/fe/package.json
@@ -3,49 +3,50 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint",
+    "lint:fix": "eslint --fix"
   },
   "dependencies": {
     "@ant-design/icons": "5.6.1",
     "@dnd-kit/core": "6.3.1",
     "@dnd-kit/sortable": "10.0.0",
-    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-accordion": "1.2.12",
     "@radix-ui/react-alert-dialog": "1.1.15",
-    "@radix-ui/react-avatar": "^1.1.11",
-    "@radix-ui/react-checkbox": "^1.3.3",
-    "@radix-ui/react-collapsible": "^1.1.12",
-    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-avatar": "1.1.11",
+    "@radix-ui/react-checkbox": "1.3.3",
+    "@radix-ui/react-collapsible": "1.1.12",
+    "@radix-ui/react-dialog": "1.1.15",
     "@radix-ui/react-dropdown-menu": "2.1.15",
-    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-label": "2.1.7",
     "@radix-ui/react-navigation-menu": "1.2.13",
     "@radix-ui/react-popover": "1.1.15",
-    "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.4",
-    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-select": "2.2.6",
+    "@radix-ui/react-separator": "1.1.7",
+    "@radix-ui/react-slot": "1.2.4",
+    "@radix-ui/react-switch": "1.2.6",
     "@radix-ui/react-tooltip": "1.2.7",
     "@reduxjs/toolkit": "2.8.2",
     "antd": "5.26.1",
     "axios": "1.11.0",
-    "class-variance-authority": "^0.7.1",
+    "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "cmdk": "1.1.1",
-    "date-fns": "^4.1.0",
+    "date-fns": "4.1.0",
     "embla-carousel-react": "8.6.0",
     "leaflet": "1.9.4",
-    "lucide-react": "^0.515.0",
-    "next": "15.5.3",
-    "react": "19.1.1",
-    "react-day-picker": "^9.13.0",
-    "react-dom": "19.1.1",
+    "lucide-react": "0.515.0",
+    "next": "16.1.4",
+    "react": "19.2.3",
+    "react-day-picker": "9.13.0",
+    "react-dom": "19.2.3",
     "react-redux": "9.2.0",
     "react-toastify": "11.0.5",
-    "recharts": "^2.15.4",
+    "recharts": "2.15.4",
     "tailwind-merge": "3.3.1",
-    "zod": "^4.1.12"
+    "zod": "4.1.12"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "4",
